--- a/seu/css/black/dodaj.css
+++ b/seu/css/black/dodaj.css
@@ -2,21 +2,19 @@
   font-weight: normal;
   font-family: Verdana;
   font-size: small;
-  width: 1050px;
+  width: 1010px;
 }
 #tabela_danych_wejsciowych tr {
-  background: #D8D8D8;
+  background: #f2f2f2;
 }
 #device_menu {
   width: 130px;
   background: black;
-  float: left;
-  display: inline;
+  float: right;
   margin: 20px 10px 10px 10px;
 }
 #formularz {
   float: left;
-  display: inline;
 }
 .ip_form {
   margin: 0px;
@@ -27,59 +25,6 @@
 }
 .ip_form select {
   width: 130px;
-}
-#top {
-background: #fff url(images/top.jpg) no-repeat;
-padding: 10px 0;
-}
-
-#content {
-background: #fff url(images/middle.jpg) repeat-y;
-padding: 0 20px;
-}
-
-#bottom {
-background: #fff url(images/bottom.jpg) no-repeat;
-padding: 10px 0;
-}
-
-.left {
-float: left;
-width: 540px;
-text-align: justify;
-padding-top: 10px;
-}
-.left h2 {
-font-size: 16px;
-font-weight: 100;
-height: 30px;
-line-height: 30px;
-background: #000;
-padding-left: 10px;
-}
-.left h2 a {
-text-decoration: none;
-color: #fff;
-}
-.left h2 a:hover {
-color: #eee;
-}
-.articles {
-padding: 10px;
-}
-
-.right {
-float: right;
-width: 200px;
-padding-top: 10px;
-}
-.right h2 {
-padding-left: 10px;
-height: 30px;
-line-height: 30px;
-background: #000;
-color: #fff;
-font-size: 13px;
 }
 .right ul {
 padding: 10px 0 15px 10px;
@@ -94,7 +39,6 @@ font-weight: 600;
 .right ul li a:hover {
 color: #111;
 }
-
 #footer {
 text-align: center;
 font-size: 11px;
