--- a/seu/css/black/menu.css
+++ b/seu/css/black/menu.css
@@ -52,7 +52,9 @@
     text-align: left;
     text-decoration: none;
     background: #EAEBD8;
-    color: #2875DE;
+    color: #000000;
+    font-weight: bold;
+    letter-spacing: 0px;    
     font: 11px arial}
 
   #sddm div a:hover
