--- a/seu/css/black/dodaj.css
+++ b/seu/css/black/dodaj.css
@@ -7,12 +7,6 @@
 #tabela_danych_wejsciowych tr {
   background: #f2f2f2;
 }
-#device_menu {
-  width: 130px;
-  background: black;
-  float: right;
-  margin: 20px 10px 10px 10px;
-}
 #formularz {
   float: left;
 }
@@ -26,7 +20,23 @@
 .ip_form select {
   width: 130px;
 }
+.right
+{
+  width: 130px;
+  float: right;
+  margin: 20px 10px 10px 10px;
+}
+.right h2 {
+  margin: 0;
+  background: none repeat scroll 0 0 #000000;
+  color: #FFFFFF;
+  font-size: 13px;
+  height: 30px;
+  line-height: 30px;
+  padding-left: 10px;
+}
 .right ul {
+margin: 0;
 padding: 10px 0 15px 10px;
 list-style-type: none;
 }
