--- a/seu/css/naglowek.css
+++ b/seu/css/naglowek.css
@@ -24,3 +24,24 @@ html, body {
 	width: 100%;
 	background-color: #888;
 }
+.historia_table table {
+	border: 2px solid black;
+	border-collapse: collapse;
+	margin-top: 20px;
+	margin-left: 2px;
+	margin-right: 2px;
+	width: 98%;
+	
+}
+.historia_table tr td{
+	border: 1px solid black;
+        padding-top: 0px;
+        padding-bottom: 0px;
+}
+.historia_table td{
+	font-family: monospace;
+	font-size: 10px;
+	text-align: left;
+        padding-left: 5px;
+        padding-right: 5px;
+}
