--- a/seu/css/styles.css
+++ b/seu/css/styles.css
@@ -88,7 +88,7 @@ ul li div:hover, .cent:hover
         padding-left: 5px;
         padding-right: 5px;
 }
-#historia table {
+.historia_table table {
 	border: 2px solid black;
 	border-collapse: collapse;
 	margin-top: 20px;
@@ -97,14 +97,12 @@ ul li div:hover, .cent:hover
 	width: 98%;
 	
 }
-#historia tr td{
+.historia_table tr td{
 	border: 1px solid black;
         padding-top: 0px;
         padding-bottom: 0px;
 }
-#historia tr {
-}
-#historia td{
+.historia_table td{
 	font-family: monospace;
 	font-size: 10px;
 	text-align: left;
