--- a/lista/css/modyf.css
+++ b/lista/css/modyf.css
@@ -38,11 +38,11 @@
   position: absolute; 
 }
 .day_name div {
-  font-size: 16px;
+  font-size: 15px;
   color: black;
   font-family: courier;
   font-weight: bold;
-  line-height: 13px;
+  line-height: 15px;
   padding: 3px;
 }
 .hour {
@@ -53,7 +53,7 @@ background: white;
   position: absolute; 
 }
 .hour div {
-  font-size: 14px;
+  font-size: 13px;
   color: black;
   font-family: courier;
   font-weight: bold;
@@ -80,12 +80,11 @@ background: #BDC8BC;
   color: black;
   text-decoration: none;
   display: inline;
-  font-family: courier;
+  font-family: monospace;
   font-weight: normal;
   padding: 1px;
   padding-top: 0px;
   margin-top: 0px;
-  letter-spacing: -2px;
 }
 #week_start_day {
   margin: 20px 0px 0px 250px;
